--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,22 +11,29 @@ jobs:
     permissions:
       contents: read
       packages: write
+
     steps:
       - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 24
           registry-url: https://npm.pkg.github.com/
+          cache: "pnpm"
 
-      - run: npm install
+      - run: pnpm install
 
       - run: |
           for dir in packages/*; do
-            if [ -d "$dir" ]; then
+            if [ -f "$dir/package.json" ]; then
               echo "Publishing package in $dir"
-              cd $dir && NODE_AUTH_TOKEN=${{secrets.GITHUB_TOKEN}} npm publish
+              cd $dir
+              pnpm publish --no-git-checks
               cd -
             fi
           done
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
