--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@adamararawi/typescript-config",
+  "name": "@faroukarar/typescript-config",
   "version": "0.0.0",
   "license": "PROPRIETARY",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/@adamararawi"
+    "registry": "https://npm.pkg.github.com/@faroukarar"
   }
 }
