--- a/apps/web/components.json
+++ b/apps/web/components.json
@@ -14,8 +14,8 @@
     "components": "@/components",
     "hooks": "@/hooks",
     "lib": "@/lib",
-    "utils": "@workspace/ui/lib/utils",
-    "ui": "@workspace/ui/components"
+    "utils": "@faroukarar/ui/lib/utils",
+    "ui": "@faroukarar/ui/components"
   },
   "menuColor": "default",
   "menuAccent": "subtle",
