--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "extends": "@workspace/typescript-config/nextjs.json",
+  "extends": "@faroukarar/typescript-config/nextjs.json",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@workspace/ui/*": ["../../packages/ui/src/*"]
+      "@faroukarar/ui/*": ["../../packages/ui/src/*"]
     },
     "plugins": [
       {
