--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,15 @@ jobs:
       - run: pnpm install
 
       - run: |
+          # إعداد ملف التعريف محلياً لضمان المصادقة
+          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > .npmrc
+
           for dir in packages/*; do
-            echo "Current Directory: $dir"
-            if [ -f "$dir/package.json" ]; then
+            if [ -d "$dir" ] && [ -f "$dir/package.json" ]; then
                 echo "Publishing package in $dir"
-                cd $dir
-                pnpm publish
-                cd -
+                # استخدم --no-git-checks لتجنب مشاكل الـ CI
+                # واستخدم --registry للتأكيد
+                pnpm publish -C "$dir" --no-git-checks --registry=https://npm.pkg.github.com/
             fi
           done
         env:
