--- a/packages/audit/package.json
+++ b/packages/audit/package.json
@@ -7,6 +7,11 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@faroukarar"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/faroukarar/saas_factory1.git",
+    "directory": "packages/audit"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
