--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,27 +10,32 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write # ضروري جداً للنشر
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: 10 # غيرناها لـ 10 لتطابق ملفك
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20 # يفضل استخدام نسخة LTS مستقرة حالياً
+          node-version: 20
           registry-url: "https://npm.pkg.github.com"
-          cache: "pnpm"
-          scope: "@faroukarar" # أضف الـ Scope الخاص بك هنا
+          scope: "@faroukarar"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Publish to GitHub Packages
-        run: pnpm -r publish --no-git-checks --access public
+      - name: Configure NPM for GitHub Packages
+        run: |
+          echo "@faroukarar:registry=https://npm.pkg.github.com" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
         env:
-          # نستخدم NODE_AUTH_TOKEN لأن setup-node مهيأ لاستخدامه
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish to GitHub Packages
+        run: pnpm -r publish --no-git-checks
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
